# PR_EOS-revamped

./: .gitignore  ReadMe.md  helper.ipynb
assets/: props.db
nr/: CMakeLists.txt  main.cpp  nr.cpp  nr.h
src/: CMakeLists.txt  main.cpp
src/db_class/: CMakeLists.txt  db_class.cpp  db_class_alte.cpp
src/include/: datastructs.h  db_class.h  maths.h  pr_eos_class.h
src/math/: CMakeLists.txt  maths.cpp
src/pr_eos_class/: CMakeLists.txt  old_code.txt  pr_eos_class.cpp
src/sqlite/: CMakeLists.txt
